scrum-38: доделать PUT, починить тест. А так сделала дофига всего с расписанием